# vt-tv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING.md  block.cc  block.h  build-docs.sh  build.sh  circle.cc  circle.h  dev-build.sh  interactive_build.sh  lib_example.py  pyproject.toml  setup.py  testvttv.py  visualizer.cc  visualizer.h
.github/workflows/: 70-incorrectly-generated-png-artifacts.yml  build-and-test-bindings.yml  build-and-test-macos.yml  build-and-test-ubuntu.yml  build-and-test-vt-tv-matrix.yml  build-and-test-vt-tv.yml  build-and-test.yml  build-docs.yml  build_vt-tv.yml  find-trailing-whitespace.yml  pip.yml  pushbasedockerimage-config.yml  pushbasedockerimage.yml  pushbasedockerimage_tmp.yml  pushbasedockerimage_ubuntu_24.04-gcc_13-vtk_9.3.1-py_3.8.yml  pushbasedockerimage_ubuntu_any-py_3.all.yml  pushdockerimage.yml  wheels.yml
apps/: CMakeLists.txt  vt-tv_standalone.cc  vttv.cc
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  config_validator.cc  config_validator.h  setup.py  tv.cc  tv.h
bindings/python/vt-tv/: __init__.py
bindings/python/vttv/: __init__.py
ci/: build-and-test-bindings.dockerfile  build-and-test.dockerfile  build.sh  build_vtk.sh  make-base-ubuntu22.04-gcc11-x64.dockerfile  python_build.sh  python_test.sh  setup_conda.sh  setup_mesa.sh  setup_vtk.sh  test-bindings-entrypoint.sh  test-bindings.sh  test.sh  test_cpp.sh  test_python.sh  ubuntu22.04-gcc11-x64.dockerfile  vtk_build.sh  xvbf_openglversion.sh  xvfb_run.sh  xvfb_start.sh  xvfb_stop.sh
ci/docker/: README.md  WIP.md  base-ubuntu.dockerfile  build-and-test-ubuntu.dockerfile  build-and-test.dockerfile  make-base-ubuntu-22.04.dockerfile  make-base-ubuntu-24.04.dockerfile  make-base-ubuntu.dockerfile  make-base.dockerfile  test-bindings.sh  test.sh  ubuntu-22.04-gcc-11-amd64.dockerfile  ubuntu22.04-gcc11-vtk9.2.2.dockerfile  ubuntu22.04-gcc11-x64.dockerfile
cmake/: cmake_config.h.in  load_nanobind_package.cmake  load_openmp.cmake  load_packages.cmake  load_vtk_package.cmake  turn_on_warnings.cmake  vtDWVConfig.cmake.in  vtTVConfig.cmake.in
config/: conf -111-lbaf-data.yaml  conf.yaml
data/111-lbaf-data/: data.0.json  data.1.json  data.2.json  data.3.json
data/ccm_example_phase_1/: data.0.json  data.1.json
data/lb_test_data/: data.0.json.br
data/reader_test_data/: reader_test_data.json
data/synthetic_attributes/: data.0.json  data.1.json  data.1.json.br  data.2.json  data.2.json.br  data.3.json
data/synthetic_attributes_compressed/: data.0.json.br  data.1.json.br  data.2.json.br  data.3.json.br
docs/: Doxyfile.in  Doxyfile.in-mcss
docs/md/: mainpage.md
examples/: CMakeLists.txt  example-yaml-file.yaml  example1.cc  example2.cc  example3.cc
examples/scripts/: lib_example.py
lib/: README.md  fetch_googletest.sh  fetch_yaml_cpp.sh
lib/CLI/: CMakeLists.txt
lib/brotli/: CMakeLists.txt
lib/fmt/: CMakeLists.txt
lib/fmt/src/: format.cc
lib/json/: CMakeLists.txt
lib/yaml-cpp/: CMakeLists.txt
lib/yaml-cpp/src/contrib/: yaml-cpp.natvis  yaml-cpp.natvis.md
scripts/: LBDatafile_schema.py  add-license-perl.pl  check_license.sh  create_synthetic_attributes_data.py  json_datafile_validator.py  lb_datafile_schema.py  license-template
src/: CMakeLists.txt
src/vt-dwv/api/: object.cc  object.h
src/vt-tv/api/: info.h  object.cc  object.h  object_communicator.h  object_info.h  object_work.h  phase.h  phase_work.h  rank.h  types.h
src/vt-tv/render/: render.cc  render.h
src/vt-tv/utility/: compressor.cc  compressor.h  compressor.impl.h  decompression_input_container.cc  decompression_input_container.h  decompression_input_container.impl.h  decompressor.h  decompressor.impl.h  decompressor_base.h  input_iterator.h  json_generator.cc  json_generator.h  json_reader.cc  json_reader.h  output_adaptor.h  parse_render.cc  parse_render.h  qoi_serializer.h
tests/: CMakeLists.txt  test_bindings.py  test_bindings_conf.yaml  test_image.sh
tests/config/: ccm-example-no-png.yaml  ccm-example.yaml  ccm-example_phase_1.yaml  conf-no-png.yaml  conf.yaml  test-vt-tv.yaml
tests/data/ccm_example/: data.0.json  data.1.json
tests/data/lb_test_data/: data.0.json  data.1.json  data.2.json  data.3.json  data.3.json.br
tests/data/synthetic_attributes/: data.0.json  data.0.json.br  data.1.json  data.2.json  data.3.json  data.3.json.br
tests/expected/ccm_example/: ccm_example_jitter_dims.csv  ccm_example_object_mesh_0.vtp  ccm_example_rank_mesh_0.vtp
tests/expected/default/: default_jitter_dims.csv  default_object_mesh_0.vtp  default_object_mesh_1.vtp  default_object_mesh_2.vtp  default_object_mesh_3.vtp  default_object_mesh_4.vtp  default_object_mesh_5.vtp  default_object_mesh_6.vtp  default_object_mesh_7.vtp  default_rank_mesh_0.vtp  default_rank_mesh_1.vtp  default_rank_mesh_2.vtp  default_rank_mesh_3.vtp  default_rank_mesh_4.vtp  default_rank_mesh_5.vtp  default_rank_mesh_6.vtp  default_rank_mesh_7.vtp
tests/unit/: CMakeLists.txt  cmake_config.h  generator.h  main.cc  test_api_info.cc  test_harness.h  test_json_reader.cc  test_object.cc  util.h
tests/unit/api/: basic_serializer.h  generator.h  helper.h  test_info.cc  test_object_communicator.cc  test_object_info.cc  test_object_work.cc  test_phase_work.cc  test_rank.cc  test_sample.h
tests/unit/lb_test_data/: data.1.json.br  data.2.json.br  reader_test_data.json
tests/unit/render/: test_parse_render.cc  test_render.cc  test_standalone_app.cc
tests/unit/synthetic_attributes/: data.0.json  data.1.json  data.1.json.br  data.2.json  data.2.json.br  data.3.json
tests/unit/utility/: test_json_reader.cc
web/: README.md  vt-tv-web.py
