[build-system]
requires = ["setuptools>=42", "wheel", "nanobind>=1.3.2", "cmake>=3.17.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vttv"
version = "0.0.1"
description = "vt-tv test"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jonathan Lifflander"},
    { name = "Pierre Pebay"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/DARMA-tasking/vt-tv"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# # Run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
